--- a/FastAPI-json_colab.ipynb
+++ b/FastAPI-json_colab.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting flask_ngrok\n",
@@ -54,6 +40,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "uXnIJBsgFuXx"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from flask_ngrok import run_with_ngrok\n",
@@ -61,42 +52,65 @@
         "from flask import jsonify\n",
         "from flask import Flask\n",
         "import random as rk"
-      ],
-      "metadata": {
-        "id": "uXnIJBsgFuXx"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "app = Flask (__name__) # The name of the application package\n",
-        "run_with_ngrok(app)"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "nUOBDFpxGefM"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "app = Flask (__name__) # The name of the application package\n",
+        "run_with_ngrok(app)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "d = {\n",
-        "    \"name\" : \"Nikola\",\n",
-        "     \"surname\" : \"Tesla\",\n",
-        "     \"idade\" : 60\n",
-        "}"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "Xo3sQAZ3G5mV"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "d = {\n",
+        "    {\"name\" : \"Nikola\",\n",
+        "     \"surname\" : \"Tesla\",\n",
+        "     \"idade\" : 60},\n",
+        "     {\"name\" : \"Luke\",\n",
+        "      \"surname\" : \"Skywalker\",\n",
+        "      \"idade\" : 50},\n",
+        "      {\"name\" : \"Mahesh\",\n",
+        "       \"age\" : 25,\n",
+        "       \"city\" : \"Bangalore\",\n",
+        "       \"country\" : \"India\"},\n",
+        "       {\"name\" : \"Alex\",\n",
+        "        \"age\" : 26,\n",
+        "        \"city\" : \"london\",\n",
+        "        \"country\" : \"UK\"},\n",
+        "        {\"name\" : \"David\",\n",
+        "         \"age\" : 27,\n",
+        "         \"city\" : \"San Francisco\",\n",
+        "         \"country\" : \"USA\"},\n",
+        "         {\"name\" : \"John\",\n",
+        "          \"age\" : 28,\n",
+        "          \"city\" : \"Toronto\",\n",
+        "          \"country\" : \"Canada\"},\n",
+        "          {\"name\" : \"Chris\",\n",
+        "           \"age\" : 29,\n",
+        "           \"city\" : \"Paris\",\n",
+        "           \"country\" : \"France\"}\n",
+        "}"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "tRAQnZiVHo0M"
+      },
+      "outputs": [],
       "source": [
         "@app.route(\"/\") # Code to assign HomePage URL in our app to function home\n",
         "\n",
@@ -105,29 +119,29 @@
         "  The entire line below must be writen in a single line\n",
         "  '''\n",
         "  return \"Página HTML\""
-      ],
-      "metadata": {
-        "id": "tRAQnZiVHo0M"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "4AYzN_Z-IqxH"
+      },
+      "outputs": [],
       "source": [
         "@app.route(\"/input\") # Code to assign Input URL in our app to function input\n",
         "\n",
         "def input():\n",
         "  return jsonify(d) # \"d\" is the dictionary we defined"
-      ],
-      "metadata": {
-        "id": "4AYzN_Z-IqxH"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OLVfuKlXJ2oX"
+      },
+      "outputs": [],
       "source": [
         "@app.route('/output', methods=['GET', 'POST']) # Output page\n",
         "\n",
@@ -138,12 +152,21 @@
         "  return jsonify(nd)\n",
         "\n",
         "  app.run()\n"
-      ],
-      "metadata": {
-        "id": "OLVfuKlXJ2oX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
